# synthv1-xt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: BuildMxml4.cmake  mxml4.config.h.in
plugin/: CMakeLists.txt  DistrhoPluginInfo.h  synthv1_dpf.cpp  synthv1_dpf.h  synthv1_dpfui.cpp  synthv1_dpfui.h  synthv1_dpfui_helpers.cpp  synthv1_dpfui_utils.cpp  synthv1_param.cpp  synthv1_param.h  synthv1_preset.cpp  synthv1_preset.h
ui/imgui-extentions/: imgui_extentions.cpp  imgui_extentions.h
ui/layout/: main_window.cpp  main_window.hpp
ui/views/: synthv1view_effects.cpp  synthv1view_synth.cpp
